--- a/hy-music-project/src/assets/css/reset.css
+++ b/hy-music-project/src/assets/css/reset.css
@@ -72,7 +72,7 @@ body, textarea, select, input, button {
   background: url(../img/sprite_02.png) no-repeat 0 9999px;
 }
 
-.sprite_covor {
+.sprite_cover {
   background: url(../img/sprite_cover.png) no-repeat 0 9999px;
 }
 
@@ -117,4 +117,9 @@ body, textarea, select, input, button {
   bottom: 50px;
   background-color: rgba(0, 0, 0, .5);
   color: #fff;
+}
+
+span:hover.link {
+  text-decoration: underline;
+  cursor: pointer;
 }
